...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/navEmail" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsv_inputs"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline2">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/LightBlue"
            app:layout_constraintBottom_toBottomOf="@id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent">

...
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16sp"
                android:text="Username"
                android:textColor="@color/DarkBlue"
                app:layout_constraintStart_toStartOf="@id/et_username"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/et_username"
                android:layout_width="250sp"
...
                android:textColor="@color/DarkBlue"
                app:layout_constraintStart_toStartOf="@id/et_username"
                app:layout_constraintLeft_toRightOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/et_username" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="250sp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4sp"
                android:background="@drawable/edittext_frame"
                android:textColor="@color/DarkBlue"
                app:layout_constraintEnd_toEndOf="parent"
...
                android:textColor="@color/DarkBlue"
                app:layout_constraintStart_toStartOf="@id/et_email"
                app:layout_constraintLeft_toRightOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/et_email" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="250sp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4sp"
                android:background="@drawable/edittext_frame"
                android:inputType="textPassword"
                android:textColor="@color/DarkBlue"
...
                android:id="@+id/tv_confirm_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16sp"
                android:text="Confirm Password"
                android:textColor="@color/DarkBlue"
                app:layout_constraintStart_toStartOf="@id/et_confirm_password"
                app:layout_constraintLeft_toRightOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/et_password" />

            <EditText
                android:id="@+id/et_confirm_password"
                android:layout_width="250sp"
...
                android:id="@+id/tv_DOB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16sp"
                android:text="Date of Birth"
                android:textColor="@color/DarkBlue"
                app:layout_constraintStart_toStartOf="@id/et_DOB"
                app:layout_constraintLeft_toRightOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/tv_personal_info" />

            <EditText
                android:id="@+id/et_DOB"
                android:layout_width="250sp"
...
                android:id="@+id/tv_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16sp"
                android:text="Country/Region"
                android:textColor="@color/DarkBlue"
                app:layout_constraintStart_toStartOf="@id/spinner_country"
                app:layout_constraintLeft_toRightOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/et_DOB" />

            <Spinner
                android:id="@+id/spinner_country"
                android:layout_width="250sp"
...
                android:id="@+id/tv_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16sp"
                android:text="City"
                android:textColor="@color/DarkBlue"
                app:layout_constraintStart_toStartOf="@id/et_city"
                app:layout_constraintLeft_toRightOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/spinner_country" />

            <EditText
                android:id="@+id/et_city"
                android:layout_width="250sp"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintLeft_toRightOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/tv_weight" />

            <Button
                android:id="@+id/bt_signUp"
                android:layout_width="250sp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16sp"
                android:background="@drawable/rounded_corners"
                android:text="Sign Up"
                android:textAllCaps="false"
                android:textColor="@color/DarkBlue"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintLeft_toRightOf="@id/guideline"
...
