...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/userInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/tv_name_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="Username"
                android:textColor="@color/DarkBlue"
                app:layout_constraintStart_toStartOf="@+id/et_name_big"
                app:layout_constraintLeft_toRightOf="@id/guideline_vertical"
                app:layout_constraintTop_toTopOf="@id/userInfo" />

            <EditText
                android:id="@+id/et_name_big"
                android:layout_width="275sp"
...
                android:id="@+id/tv_city_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="City"
                android:textColor="@color/DarkBlue"
                app:layout_constraintStart_toStartOf="@+id/et_city_big"
                app:layout_constraintTop_toBottomOf="@id/et_DOB" />

            <EditText
                android:id="@+id/et_city_big"
                android:layout_width="275sp"
                android:layout_height="30dp"
...
