...
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string-array name="countries_array">
        <item>United States</item>
        <item>Canada</item>
        <item>Mexico</item>
    </string-array>

    <string-array name="goal_array">
        <item>Lose Weight</item>
...

    <string-array name="sex_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="title_activity_main_drawer">MainDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
...
