<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Blue">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_banner"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
         />

    <Button
        android:id="@+id/signUp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:layout_marginTop="124dp"
        android:background="@drawable/rounded_corners_signup"
        android:text="Sign Up"
...
